fix: *Replacing* and 'Pending* instead  of *Installing* and *InstallSucceeded*

--- a/modules/administration-guide/pages/repairing-the-devworkspace-operator-on-openshift.adoc
+++ b/modules/administration-guide/pages/repairing-the-devworkspace-operator-on-openshift.adoc
@@ -13,7 +13,7 @@ Under certain conditions, such as https://docs.openshift.com/container-platform/
 
 * An active `{orch-cli}` session as a cluster administrator to the destination OpenShift cluster. See {orch-cli-link}.
 
-* On the *Installed Operators* page of the {platforms-name} web console, you see multiple entries for the {devworkspace} Operator or one entry that is stuck in a loop of *Installing* and *InstallSucceeded*.
+* On the *Installed Operators* page of the {platforms-name} web console, you see multiple entries for the {devworkspace} Operator or one entry that is stuck in a loop of *Replacing* and *Pending*.
 
 .Procedure
 
