fix: add namespace to the oc delete sub command

--- a/modules/administration-guide/pages/repairing-the-devworkspace-operator-on-openshift.adoc
+++ b/modules/administration-guide/pages/repairing-the-devworkspace-operator-on-openshift.adoc
@@ -38,8 +38,10 @@ NOTE: The `DevWorkspaceOperatorConfig` and `DevWorkspaceRouting` CRDs  have the 
 . Remove the {devworkspace} Operator subscription:
 +
 ----
-$ oc delete sub devworkspace-operator
+$ oc delete sub devworkspace-operator \
+-n openshift-operators <1>
 ----
+<1> `openshift-operators` or an OpenShift {orch-namespace} where the {devworkspace} Operator is installed.
 
 . Get the {devworkspace} Operator CSVs in the __<devworkspace-operator.vX.Y.Z>__ format:
 +
