--- a/modules/administration-guide/pages/repairing-the-devworkspace-operator-on-openshift.adoc
+++ b/modules/administration-guide/pages/repairing-the-devworkspace-operator-on-openshift.adoc
@@ -53,11 +53,10 @@ $ oc get csv | grep devworkspace
 +
 [subs="+quotes"]
 ----
-$ oc delete csv __<devworkspace-operator.vX.Y.Z>__ \ <1>
--n openshift-operators <2>
+$ oc delete csv __<devworkspace-operator.vX.Y.Z>__ \
+-n openshift-operators <1>
 ----
-<1> For example, `devworkspace-operator.v0.15.1` or `devworkspace-operator.v0.15.2`.
-<2> `openshift-operators` or an OpenShift {orch-namespace} where the {devworkspace} Operator is installed.
+<1> `openshift-operators` or an OpenShift {orch-namespace} where the {devworkspace} Operator is installed.
 
 . Re-create the {devworkspace} Operator subscription:
 +
