fix: clarifying the removal of the webhood section

--- a/modules/administration-guide/pages/repairing-the-devworkspace-operator-on-openshift.adoc
+++ b/modules/administration-guide/pages/repairing-the-devworkspace-operator-on-openshift.adoc
@@ -19,7 +19,7 @@ Under certain conditions, such as https://docs.openshift.com/container-platform/
 
 . Delete the `devworkspace-controller` namespace that contains the failing pod.
 
-. Update `DevWorkspace` and `DevWorkspaceTemplate` Custom Resource Definitions (CRD) by setting the conversion strategy to `None` and removing the next several lines of the removed strategy:
+. Update `DevWorkspace` and `DevWorkspaceTemplate` Custom Resource Definitions (CRD) by setting the conversion strategy to `None` and removing the entire `webhook` section:
 +
 [source,yaml]
 ----
