fix: downgrading step 7 into an admonition in response to Dmytro's feedback

--- a/modules/administration-guide/pages/repairing-the-devworkspace-operator-on-openshift.adoc
+++ b/modules/administration-guide/pages/repairing-the-devworkspace-operator-on-openshift.adoc
@@ -79,7 +79,7 @@ EOF
 ----
 +
 <1> `Automatic` or `Manual`.
-
-. In the *Administrator* perspective of the OpenShift web console, go to menu:Operators[Installed Operators] and select the following for the *{devworkspace} Operator*: menu:Upgrade available[Preview InstallPlan > Approve].
++
+IMPORTANT: For `installPlanApproval: Manual`, in the *Administrator* perspective of the OpenShift web console, go to menu:Operators[Installed Operators] and select the following for the *{devworkspace} Operator*: menu:Upgrade available[Preview InstallPlan > Approve].
 
 . In the *Administrator* perspective of the OpenShift web console, go to menu:Operators[Installed Operators] and verify the *Succeeded* status of the *{devworkspace} Operator*.
