--- a/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
+++ b/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
@@ -37,6 +37,6 @@ include::example$snip_{project-context}-default-namespace.adoc[]
 +
 include::example$snip_{project-context}-limiting-the-number-of-workspaces-that-a-user-can-keep.adoc[]
 
-.Addtional resources
+.Additional resources
 
 * xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
