--- a/RELEASE.adoc
+++ b/RELEASE.adoc
@@ -32,6 +32,15 @@ asciidoc:
     prod-ver-major: "_<major>_"
 ----
 
+. Generate the single-sourced documents:
++
+----
+$ ./tools/checluster_docs_gen.sh
+$ ./tools/environment_docs_gen.sh
+----
+
+. Commit and push the changes to the release branch.
+
 . Edit the link:https://github.com/eclipse-che/che-docs/blob/publication-builder/publication-builder-antora-playbook.yml[`publication-builder-antora-playbook.yml` file in the `publication-builder` branch]. Change the latest branch to "__<major>__.__<minor>__.x". Keep the other branches (`7.43.x` and `main`).
 +
 [source,yaml,subs="+attributes,+quotes"]
