--- a/modules/administration-guide/examples/checluster-properties.adoc
+++ b/modules/administration-guide/examples/checluster-properties.adoc
@@ -11,6 +11,8 @@ defaultEditor: The default editor to workspace create with. It could be a plugin
 defaultNamespace: User's default namespace.
 defaultPlugins: Default plug-ins applied to DevWorkspaces.
 nodeSelector: The node selector limits the nodes that can run the workspace pods.
+secondsOfInactivityBeforeIdling: Idle timeout for workspaces in seconds. This timeout is the duration after which a workspace will be idled if there is no activity. To disable workspace idling due to inactivity, set this value to -1.
+secondsOfRunBeforeIdling: Run timeout for workspaces in seconds. This timeout is the maximum duration a workspace runs. To disable workspace run timeout, set this value to -1.
 storage: Workspaces persistent storage.
 tolerations: The pod tolerations of the workspace pods limit where the workspace pods can run.
 trustedCerts: Trusted certificate settings.
@@ -65,6 +67,7 @@ proxy: Proxy server settings for Kubernetes cluster. No additional configuration
 deployment: Deployment override options.
 disableInternalRegistry: Disables internal plug-in registry.
 externalPluginRegistries: External plugin registries.
+openVSXURL: Open VSX registry URL. If omitted an embedded instance will be used.
 :=== 
 
 [id="checluster-custom-resource-components-properties-devfileRegistry-settings_{context}"]
