--- a/modules/administration-guide/examples/system-variables.adoc
+++ b/modules/administration-guide/examples/system-variables.adoc
@@ -495,6 +495,51 @@ Default::: `+NULL+`
 '''
 
 
+== `+CHE_OAUTH2_BITBUCKET_CLIENTID__FILEPATH+`
+
+Configuration of Bitbucket OAuth2 client. Used to obtain Personal access tokens. Location of the file with Bitbucket client id.
+
+Default::: `+NULL+`
+
+'''
+
+
+== `+CHE_OAUTH2_BITBUCKET_CLIENTSECRET__FILEPATH+`
+
+Location of the file with Bitbucket client secret.
+
+Default::: `+NULL+`
+
+'''
+
+
+== `+CHE_OAUTH_BITBUCKET_AUTHURI+`
+
+Bitbucket OAuth authorization URI.
+
+Default::: `+https://bitbucket.org/site/oauth2/authorize+`
+
+'''
+
+
+== `+CHE_OAUTH_BITBUCKET_TOKENURI+`
+
+Bitbucket OAuth token URI.
+
+Default::: `+https://bitbucket.org/site/oauth2/access_token+`
+
+'''
+
+
+== `+CHE_OAUTH_BITBUCKET_REDIRECTURIS+`
+
+Bitbucket OAuth redirect URIs. Separate multiple values with comma, for example: URI,URI,URI
+
+Default::: `+http://localhost:${CHE_PORT}/api/oauth/callback+`
+
+'''
+
+
 [id="internal"]
 = Internal
 
@@ -1607,6 +1652,15 @@ Default::: `+3+`
 == `+CHE_OIDC_USERNAME__CLAIM+`
 
 Username claim to be used as user display name when parsing JWT token if not defined the fallback value is 'preferred_username' in Keycloak installations and `name` in Dex installations.
+
+Default::: `+NULL+`
+
+'''
+
+
+== `+CHE_OIDC_EMAIL__CLAIM+`
+
+Email claim to be used when parsing JWT token. If not defined, the fallback value is 'email'.
 
 Default::: `+NULL+`
 
