chore: normalized metadata for user guide (present, sorted)

--- a/modules/end-user-guide/pages/adding-a-vscode-extension.adoc
+++ b/modules/end-user-guide/pages/adding-a-vscode-extension.adoc
@@ -1,6 +1,8 @@
-:navtitle: Adding a Visual Studio Code extension to a workspace
+:_content-type: PROCEDURE
 :description: Adding a Visual Studio Code extension to a workspace
 :keywords: Visual Studio Code extension, user-guide
+:navtitle: Adding a Visual Studio Code extension to a workspace
+:page-aliases:
 
 [id="adding-visual-studio-code-extension_{context}"]
 = Adding a Visual Studio Code extension to a workspace
@@ -158,4 +160,3 @@ attributes:
   .che/che-theia-plugins.yaml: |  
     - id: redhat/java/latest
 ----
-
