--- a/modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc
+++ b/modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc
@@ -2,7 +2,7 @@
 :description: Authenticating to a Git server from a workspace
 :keywords: authentication, authenticate, github, gitlab, bitbucket
 :navtitle: Authenticating to a Git server from a workspace
-// :page-aliases:
+:page-aliases:
 
 [id="authenticating-to-a-git-server-from-a-workspace_{context}"]
 = Authenticating to a Git server from a workspace
