--- a/modules/end-user-guide/pages/automatic-token-injection.adoc
+++ b/modules/end-user-guide/pages/automatic-token-injection.adoc
@@ -1,7 +1,8 @@
-:navtitle: Automatic {orch-name} token injection
+:_content-type: PROCEDURE
 :description: Automatic {orch-name} token injection
 :keywords: user-guide, token, injection
-:page-aliases: .:automatic-token-injection, overview:automatic-token-injection
+:navtitle: Automatic {orch-name} token injection
+:page-aliases: .:automatic-token-injection.adoc, overview:automatic-token-injection.adoc
 
 [id="automatic-token-injection_{context}"]
 = Automatic {orch-name} token injection
