--- a/modules/end-user-guide/pages/customizing-workspace-components.adoc
+++ b/modules/end-user-guide/pages/customizing-workspace-components.adoc
@@ -1,7 +1,8 @@
-:navtitle: Customizing workspace components
+:_content-type: PROCEDURE
 :description: Customizing workspace components
 :keywords: user-guide, customizing-developer-environments
-:page-aliases: configuring-a-workspace-using-a-devfile, making-a-workspace-portable-using-a-devfile, authoring-devfiles-version-1, authoring-devfiles-version-2, authoring-devfiles,  defining-custom-commands-for-che-theia, adding-a-vs-code-extension-to-a-workspace, adding-a-vs-code-extension-to-the-che-plugin-registry, adding-tools-to-che-after-creating-a-workspace, using-private-container-registries, using-maven-artifact-repositories, using-gradle-artifact-repositories, using-python-artifact-repositories, using-go-artifact-repositories, using-nuget-artifact-repositories, using-npm-artifact-repositories, customizing-developer-environments, what-is-a-che-theia-plug-in, testing-a-visual-studio-code-extension-in-che, publishing-metadata-for-a-vs-code-extension, contributor-guide:developing-che-theia-plug-ins, contributor-guide:testing-che-theia-plug-ins, contributor-guide:publishing-che-theia-plug-ins, contributor-guide:adding-support-for-a-new-language, contributor-guide:adding-support-for-a-new-debugger, contributor-guide:che-extensibility-reference, contributor-guide:che-extension-points, contributor-guide:che-theia-plug-in-api, contributor-guide:debug-adapter-protocol, contributor-guide:language-server-protocol, customizing-workspaces-components
+:navtitle: Customizing workspace components
+:page-aliases: configuring-a-workspace-using-a-devfile.adoc, making-a-workspace-portable-using-a-devfile.adoc, authoring-devfiles-version-1.adoc, authoring-devfiles-version-2.adoc, authoring-devfiles.adoc,  defining-custom-commands-for-che-theia.adoc, adding-a-vs-code-extension-to-a-workspace.adoc, adding-a-vs-code-extension-to-the-che-plugin-registry.adoc, adding-tools-to-che-after-creating-a-workspace.adoc, using-private-container-registries.adoc, customizing-developer-environments.adoc, what-is-a-che-theia-plug-in.adoc, testing-a-visual-studio-code-extension-in-che.adoc, publishing-metadata-for-a-vs-code-extension.adoc, contributor-guide:developing-che-theia-plug-ins.adoc, contributor-guide:testing-che-theia-plug-ins.adoc, contributor-guide:publishing-che-theia-plug-ins.adoc, contributor-guide:adding-support-for-a-new-language.adoc, contributor-guide:adding-support-for-a-new-debugger.adoc, contributor-guide:che-extensibility-reference.adoc, contributor-guide:che-extension-points.adoc, contributor-guide:che-theia-plug-in-api.adoc, contributor-guide:debug-adapter-protocol.adoc, contributor-guide:language-server-protocol.adoc, customizing-workspaces-components.adoc
 
 // The application dashboard requires the presence of the `customizing-workspaces` id.
 [id="customizing-workspaces_{context}"]
