--- a/modules/end-user-guide/pages/developer-workspaces.adoc
+++ b/modules/end-user-guide/pages/developer-workspaces.adoc
@@ -1,8 +1,8 @@
 :_content-type: CONCEPT
-:navtitle: Developer workspaces
-:description: Developer workspaces
+:description: {prod} provides developer workspaces with everything you need to code, build, test, run, and debug applications.
 :keywords: user-guide, workspaces-overview
-:page-aliases: .:using-developer-workspaces, .:workspaces-overview, .:what-are-workspaces.html, .:creating-and-configuring-a-new-workspace, creating-and-configuring-a-new-workspace, authenticating-on-scm-server-with-a-personal-access-token, navigating-che, navigating-che-using-the-dashboard, importing-certificates-to-browsers, creating-a-workspace-from-local-devfile-using-chectl, importing-kubernetes-applications-into-a-workspace, workspaces-overview, configuring-a-workspace-with-dashboard, creating-a-workspace-from-a-code-sample, creating-a-workspace-from-a-template-devfile, creating-a-workspace-from-remote-devfile, running-a-workspace-with-dashboard, remotely-accessing-workspaces, importing-the-source-code-of-a-project-into-a-workspace, using-developer-workspaces
+:navtitle: Developer workspaces
+:page-aliases: .:using-developer-workspaces.adoc, .:workspaces-overview.adoc, .:what-are-workspaces.html, .:creating-and-configuring-a-new-workspace.adoc, creating-and-configuring-a-new-workspace.adoc, authenticating-on-scm-server-with-a-personal-access-token.adoc, navigating-che.adoc, navigating-che-using-the-dashboard.adoc, importing-certificates-to-browsers.adoc, creating-a-workspace-from-local-devfile-using-chectl.adoc, importing-kubernetes-applications-into-a-workspace.adoc, workspaces-overview.adoc, configuring-a-workspace-with-dashboard.adoc, creating-a-workspace-from-a-code-sample.adoc, creating-a-workspace-from-a-template-devfile.adoc, creating-a-workspace-from-remote-devfile.adoc, running-a-workspace-with-dashboard.adoc, remotely-accessing-workspaces.adoc, importing-the-source-code-of-a-project-into-a-workspace.adoc, using-developer-workspaces.adoc
 
 [id="developer-workspaces_{context}"]
 = Developer workspaces
