--- a/modules/end-user-guide/pages/enabling-artifact-repositories-in-a-restricted-environment.adoc
+++ b/modules/end-user-guide/pages/enabling-artifact-repositories-in-a-restricted-environment.adoc
@@ -1,8 +1,8 @@
 :_content-type: ASSEMBLY
-:navtitle: Enabling artifact repositories in a restricted environment
 :description: Enabling artifact repositories in a restricted environment
 :keywords: artifact-repositories, artifact-repository, maven, gradle, nuget, python, go, npm
-:page-aliases: .:using-artifact-repositories-in-a-restricted-environment
+:navtitle: Enabling artifact repositories in a restricted environment
+:page-aliases: using-artifact-repositories-in-a-restricted-environment.adoc
 
 [id="enabling-artifact-repositories-in-a-restricted-environment_{context}"]
 = Enabling artifact repositories in a restricted environment
