--- a/modules/end-user-guide/pages/enabling-go-artifact-repositories.adoc
+++ b/modules/end-user-guide/pages/enabling-go-artifact-repositories.adoc
@@ -1,6 +1,8 @@
-:navtitle: Go
+:_content-type: PROCEDURE
+:description: You can enable a Go artifact repository in Go workspaces that run in a restricted environment.
 :keywords: go, artifact-repository, artifact-repositories
-:page-aliases: .:using-go-artifact-repositories
+:navtitle: Go
+:page-aliases: using-go-artifact-repositories.adoc
 
 [id="enabling-go-artifact-repositories"]
 = Enabling Go artifact repositories
