--- a/modules/end-user-guide/pages/enabling-maven-artifact-repositories.adoc
+++ b/modules/end-user-guide/pages/enabling-maven-artifact-repositories.adoc
@@ -1,6 +1,8 @@
-:navtitle: Maven
+:_content-type: PROCEDURE
+:description: You can enable a Maven artifact repository in Maven workspaces that run in a restricted environment.
 :keywords: maven, artifact-repository, artifact-repositories
-:page-aliases: .:using-maven-artifact-repositories
+:navtitle: Maven
+:page-aliases: using-maven-artifact-repositories.adoc
 
 [id="enabling-maven-artifact-repositories"]
 = Enabling Maven artifact repositories
