--- a/modules/end-user-guide/pages/enabling-nuget-artifact-repositories.adoc
+++ b/modules/end-user-guide/pages/enabling-nuget-artifact-repositories.adoc
@@ -1,6 +1,8 @@
-:navtitle: NuGet
+:_content-type: PROCEDURE
+:description: You can enable a NuGet artifact repository in NuGet workspaces that run in a restricted environment.
 :keywords: nuget, artifact-repository, artifact-repositories
-:page-aliases: .:using-nuget-artifact-repositories
+:navtitle: NuGet
+:page-aliases: using-nuget-artifact-repositories.adoc
 
 [id="enabling-nuget-artifact-repositories"]
 = Enabling NuGet artifact repositories
