--- a/modules/end-user-guide/pages/integrating-with-kubernetes.adoc
+++ b/modules/end-user-guide/pages/integrating-with-kubernetes.adoc
@@ -1,6 +1,7 @@
-:navtitle: Integrating with {orch-name}
+:_content-type: ASSEMBLY
 :description: Integrating with {orch-name}
 :keywords: overview, integrating with {orch-name}
+:navtitle: Integrating with {orch-name}
 :page-aliases: 
 
 [id="integrating-with-kubernetes_{context}"]
