--- a/modules/end-user-guide/pages/investigating-failures-at-a-workspace-start-using-the-verbose-mode.adoc
+++ b/modules/end-user-guide/pages/investigating-failures-at-a-workspace-start-using-the-verbose-mode.adoc
@@ -1,7 +1,8 @@
-:navtitle: Troubleshooting workspace start failures
+:_content-type: PROCEDURE
 :description: Troubleshooting workspace start failures
 :keywords: user-guide, investigating-failures-at-a-workspace-start-using-the-verbose-mode
-:page-aliases: .:investigating-failures-at-a-workspace-start-using-the-verbose-mode, .:starting-a-che-workspace-in-debug-mode, starting-a-che-workspace-in-debug-mode, .:restarting-a-che-workspace-in-debug-mode-after-start-failure, restarting-a-che-workspace-in-debug-mode-after-start-failure
+:navtitle: Troubleshooting workspace start failures
+:page-aliases: .:investigating-failures-at-a-workspace-start-using-the-verbose-mode.adoc, .:starting-a-che-workspace-in-debug-mode.adoc, starting-a-che-workspace-in-debug-mode.adoc, .:restarting-a-che-workspace-in-debug-mode-after-start-failure.adoc, restarting-a-che-workspace-in-debug-mode-after-start-failure.adoc
 
 [id="investigating-failures-at-a-workspace-start-using-the-verbose-mode_{context}"]
 = Investigating failures at a workspace start using the Verbose mode
