--- a/modules/end-user-guide/pages/mounting-configmaps.adoc
+++ b/modules/end-user-guide/pages/mounting-configmaps.adoc
@@ -1,6 +1,7 @@
-:navtitle: Mounting ConfigMaps
-:description: Mounting ConfigMaps
+:_content-type: PROCEDURE
+:description: To mount non-confidential configuration data into your workspaces, use {kubernetes} ConfigMaps.
 :keywords: user-guide, configuring, user, configmaps, configmap, mounting, mount
+:navtitle: Mounting ConfigMaps
 :page-aliases:
 
 [id="mounting-configmaps_{context}"]
