--- a/modules/end-user-guide/pages/mounting-secrets.adoc
+++ b/modules/end-user-guide/pages/mounting-secrets.adoc
@@ -1,6 +1,7 @@
-:navtitle: Mounting Secrets
-:description: Mounting Secrets
+:_content-type: PROCEDURE
+:description: To mount confidential data into your workspaces, use {kubernetes} Secrets.
 :keywords: user-guide, configuring, user, configmap, secret, secrets, mounting, mount
+:navtitle: Mounting Secrets
 :page-aliases:
 
 [id="mounting-secrets_{context}"]
