--- a/modules/end-user-guide/pages/navigating-che-from-openshift-developer-perspective.adoc
+++ b/modules/end-user-guide/pages/navigating-che-from-openshift-developer-perspective.adoc
@@ -1,7 +1,8 @@
-:navtitle: Navigating {prod-short} from OpenShift Developer Perspective
+:_content-type: ASSEMBLY
 :description: Navigating {prod-short} from OpenShift Developer Perspective
 :keywords: overview, accessing-che-from-openshift-developer-perspective
-:page-aliases: .:accessing-che-from-openshift-developer-perspective, overview:accessing-che-from-openshift-developer-perspective, accessing-che-from-openshift-developer-perspective
+:navtitle: Navigating {prod-short} from OpenShift Developer Perspective
+:page-aliases: .:accessing-che-from-openshift-developer-perspective.adoc, overview:accessing-che-from-openshift-developer-perspective.adoc, accessing-che-from-openshift-developer-perspective.adoc
 
 :parent-context-of-accessing-che-from-openshift-developer-perspective: {context}
 
