--- a/modules/end-user-guide/pages/navigating-openshift-web-console-from-che.adoc
+++ b/modules/end-user-guide/pages/navigating-openshift-web-console-from-che.adoc
@@ -1,7 +1,8 @@
-:navtitle: Navigating OpenShift web console from {prod-short}
+:_content-type: PROCEDURE
 :description: Navigating OpenShift web console from {prod-short}
 :keywords: overview, OpenShift, web console
-:page-aliases: .:accessing-openshift-web-console-from-che, overview:accessing-openshift-web-console-from-che, accessing-openshift-web-console-from-che
+:navtitle: Navigating OpenShift web console from {prod-short}
+:page-aliases: .:accessing-openshift-web-console-from-che.adoc, overview:accessing-openshift-web-console-from-che.adoc, accessing-openshift-web-console-from-che.adoc
 
 :parent-context-of-accessing-che-from-openshift-developer-perspective: {context}
 
