--- a/modules/end-user-guide/pages/optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc
+++ b/modules/end-user-guide/pages/optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc
@@ -2,7 +2,7 @@
 :description: Optional parameters for the URLs for starting a new workspace
 :keywords: url, urls, parameter, parameters, starting, start, workspace, workspaces, url-parameter, url-parameters
 :navtitle: Optional parameters for the URLs for starting a new workspace
-// :page-aliases:
+:page-aliases:
 
 [id="parameters-for-the-urls-for-starting-a-new-workspace_{context}"]
 = Optional parameters for the URLs for starting a new workspace
