--- a/modules/end-user-guide/pages/requesting-persistent-storage-for-workspaces.adoc
+++ b/modules/end-user-guide/pages/requesting-persistent-storage-for-workspaces.adoc
@@ -1,6 +1,7 @@
-:navtitle: Requesting persistent storage for workspaces
+:_content-type: PROCEDURE
 :description: Requesting persistent storage for workspaces
 :keywords: user-guide, configuring, user, volumes, persistent, volume, claim, mounting, mount
+:navtitle: Requesting persistent storage for workspaces
 :page-aliases:
 
 [id="requesting-persistent-storage-for-workspaces_{context}"]
