--- a/modules/end-user-guide/pages/selecting-a-workspace-ide.adoc
+++ b/modules/end-user-guide/pages/selecting-a-workspace-ide.adoc
@@ -1,8 +1,8 @@
 :_content-type: CONCEPT
-:navtitle: Selecting a workspace IDE
 :description: Selecting a workspace IDE
-:keywords: user-guide, selecting, IDE
-:page-aliases: select, selecting, editor, ide, vs-code, visual-studio, visual-studio-code, jetbrains, intellij, pycharm, theia, che-theia
+:keywords: user-guide, selecting, IDE, select, selecting, editor, ide, vs-code, visual-studio, visual-studio-code, jetbrains, intellij, pycharm, theia, che-theia
+:navtitle: Selecting a workspace IDE
+:page-aliases:
 
 [id="selecting-a-workspace-ide_{context}"]
 = Selecting a workspace IDE
