--- a/modules/end-user-guide/pages/selecting-an-ide-by-using-a-url-parameter.adoc
+++ b/modules/end-user-guide/pages/selecting-an-ide-by-using-a-url-parameter.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Selecting an in-browser IDE for a new workspace by using a URL parameter
 :description: Selecting an in-browser IDE for a new workspace by using a URL parameter
 :keywords: select-IDE
-//:page-aliases:
+:navtitle: Selecting an in-browser IDE for a new workspace by using a URL parameter
+:page-aliases:
 
 [id="selecting-an-in-browser-ide-for-a-new-workspace-by-using-a-url-parameter_{context}"]
 = Selecting an in-browser IDE for a new workspace by using a URL parameter
