--- a/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
@@ -2,7 +2,7 @@
 :description: Starting a new workspace with a clone of a Git repository
 :keywords: start-new-workspace, start-a-new-workspace, how-to-start-new-workspace, how-to-start-a-new-workspace, starting-a-new-workspace, clone-git-repository, clone-a-git-repository, how-to-start-workspace, how-to-start-a-workspace
 :navtitle: Starting a new workspace with a clone of a Git repository
-// :page-aliases:
+:page-aliases:
 
 [id="starting-a-new-workspace-with-a-clone-of-a-git-repository_{context}"]
 = Starting a new workspace with a clone of a Git repository
