--- a/modules/end-user-guide/pages/troubleshooting-che.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-che.adoc
@@ -1,7 +1,8 @@
-:navtitle: Troubleshooting {prod-short}
+:_content-type: ASSEMBLY
 :description: Troubleshooting {prod-short}
 :keywords: user-guide, troubleshooting-che
-:page-aliases: .:troubleshooting-che
+:navtitle: Troubleshooting {prod-short}
+:page-aliases: .:troubleshooting-che.adoc
 
 [id="troubleshooting-{prod-id-short}_{context}"]
 = Troubleshooting {prod-short}
