--- a/modules/end-user-guide/pages/troubleshooting-network-problems.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-network-problems.adoc
@@ -1,7 +1,8 @@
-:navtitle: Troubleshooting network problems
+:_content-type: PROCEDURE
 :description: Troubleshooting network problems
 :keywords: user-guide, troubleshooting-network-problems
-:page-aliases: .:troubleshooting-network-problems
+:navtitle: Troubleshooting network problems
+:page-aliases: .:troubleshooting-network-problems.adoc
 
 [id="troubleshooting-network-problems_{context}"]
 = Troubleshooting network problems
