--- a/modules/end-user-guide/pages/url-parameter-concatenation.adoc
+++ b/modules/end-user-guide/pages/url-parameter-concatenation.adoc
@@ -1,8 +1,8 @@
 :_content-type: CONCEPT
-:navtitle: URL parameter concatenation
 :description: URL parameter concatenation
 :keywords: concatenate, concatenation, URL-parameters, multiple-URL-parameters
-// :page-aliases:
+:navtitle: URL parameter concatenation
+:page-aliases:
 
 [id="url-parameter-concatenation_{context}"]
 = URL parameter concatenation
