--- a/modules/end-user-guide/pages/url-parameter-for-the-devfile-file-path.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-devfile-file-path.adoc
@@ -1,8 +1,8 @@
 :_content-type: CONCEPT
-:navtitle: URL parameter for the devfile file path
 :description: URL parameter for the devfile file path
 :keywords: devfile-path, devfile-file-path, devfile-path-parameter, devfile-file-path-parameter
-// :page-aliases:
+:navtitle: URL parameter for the devfile file path
+:page-aliases:
 
 [id="url-parameter-for-the-devfile-file-path_{context}"]
 = URL parameter for the devfile file path
