--- a/modules/end-user-guide/pages/url-parameter-for-the-workspace-ide.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-workspace-ide.adoc
@@ -1,8 +1,8 @@
 :_content-type: CONCEPT
-:navtitle: URL parameter for the workspace IDE
 :description: URL parameter for the workspace IDE
 :keywords: ide, editor, workspace-ide, workspace-editor
-// :page-aliases:
+:navtitle: URL parameter for the workspace IDE
+:page-aliases:
 
 [id="url-parameter-for-the-workspace-ide_{context}"]
 = URL parameter for the workspace IDE
