--- a/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
+++ b/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
@@ -1,7 +1,8 @@
+:_content-type: CONCEPT
 :navtitle: Using credentials and configurations in workspaces
 :description: Using credentials and configurations in workspaces
 :keywords: user-guide, configuring, user, configmaps, secrets, volumes, mounting, mount
-:page-aliases: 
+:page-aliases:
 
 [id="using-credentials-and-configurations-in-workspaces_{context}"]
 = Using credentials and configurations in workspaces
