--- a/modules/end-user-guide/pages/using-git-credentials.adoc
+++ b/modules/end-user-guide/pages/using-git-credentials.adoc
@@ -1,7 +1,7 @@
-//_content-type: ASSEMBLY
-:navtitle: Using Git credentials
+:_content-type: ASSEMBLYE
 :description: Using Git credentials
 :keywords: Git, credentials, Git-credentials
+:navtitle: Using Git credentials
 :page-aliases: using-a-Git-credentials-store.adoc
 
 [id="using-git-credentials_{context}"]
