--- a/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
+++ b/modules/end-user-guide/pages/viewing-che-workspaces-logs.adoc
@@ -1,7 +1,8 @@
-:navtitle: Viewing {prod-short} workspaces logs
+:_content-type: ASSEMBLY
 :description: Viewing {prod-short} workspaces logs
 :keywords: administration-guide, viewing-che-workspaces-logs
-:page-aliases: .:viewing-che-workspaces-logs, administration-guide:viewing-che-workspaces-logs
+:navtitle: Viewing {prod-short} workspaces logs
+:page-aliases: .:viewing-che-workspaces-logs.adoc, administration-guide:viewing-che-workspaces-logs.adoc
 
 :parent-context-of-viewing-che-workspaces-logs: {context}
 
