--- a/modules/end-user-guide/pages/adopting-che.adoc
+++ b/modules/end-user-guide/pages/adopting-che.adoc
@@ -2,7 +2,7 @@
 :description: Adopting {prod-short}
 :keywords: adopt, adopting, adoption
 :navtitle: Adopting {prod-short}
-// :page-aliases:
+:page-aliases:
 
 [id="adopting-che_{context}"]
 = Adopting {prod-short}
