--- a/modules/end-user-guide/pages/basic-actions-you-can-perform-on-a-workspace.adoc
+++ b/modules/end-user-guide/pages/basic-actions-you-can-perform-on-a-workspace.adoc
@@ -2,7 +2,7 @@
 :description: Basic actions you can perform on a workspace
 :keywords: workspace, workspaces, reopen, restart, stop, start, delete
 :navtitle: Basic actions you can perform on a workspace
-// :page-aliases:
+:page-aliases:
 
 [id="basic-actions-you-can-perform-on-a-workspace_{context}"]
 = Basic actions you can perform on a workspace
