--- a/modules/end-user-guide/pages/benefits-of-pull-requests-review-in-che.adoc
+++ b/modules/end-user-guide/pages/benefits-of-pull-requests-review-in-che.adoc
@@ -1,9 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Reviewing pull and merge requests
-:description: Reviewing pull and merge requests
+:description: {prod} workspace contains all tools you need to review pull and merge requests from start to finish.
 :keywords: user-guide, reviewing, pull request, merge request
-:description: {prod} workspace contains all tools you need to review pull and merge requests from start to finish. By clicking a {prod-short} link, you get access to {prod}-supported web IDE with a ready-to-use workspace where you can run a linter, unit tests, the build and more.
-:page-aliases: 
+:navtitle: Reviewing pull and merge requests
+:page-aliases:
 
 [id="title_{context}"]
 = Benefits of reviewing pull and merge requests in {prod}
