--- a/modules/end-user-guide/pages/creating-image-pull-secrets.adoc
+++ b/modules/end-user-guide/pages/creating-image-pull-secrets.adoc
@@ -1,8 +1,8 @@
 :_content-type: ASSEMBLY
-:navtitle: Creating image pull Secrets
-:description: Creating image pull Secrets
+:description: To allow the `{devworkspace}` Pods in the {orch-name} cluster of your organization's {prod-short} instance to access container registries that require authentication, create an image pull Secret.
 :keywords: user-guide, configuring, user, secrets
-:page-aliases: 
+:navtitle: Creating image pull Secrets
+:page-aliases:
 
 [id="image-pull-secrets_{context}"]
 = Creating image pull Secrets
