--- a/modules/end-user-guide/pages/enabling-gradle-artifact-repositories.adoc
+++ b/modules/end-user-guide/pages/enabling-gradle-artifact-repositories.adoc
@@ -1,6 +1,8 @@
-:navtitle: Gradle
+:_content-type: PROCEDURE
+:description: You can enable a Gradle artifact repository in Gradle workspaces that run in a restricted environment.
 :keywords: gradle, artifact-repository, artifact-repositories
-:page-aliases: .:using-gradle-artifact-repositories
+:navtitle: Gradle
+:page-aliases: using-gradle-artifact-repositories.adoc
 
 [id="enabling-gradle-artifact-repositories"]
 = Enabling Gradle artifact repositories
