--- a/modules/end-user-guide/pages/enabling-npm-artifact-repositories.adoc
+++ b/modules/end-user-guide/pages/enabling-npm-artifact-repositories.adoc
@@ -1,6 +1,8 @@
-:navtitle: npm
+:_content-type: PROCEDURE
+:description: You can enable an npm artifact repository in npm workspaces that run in a restricted environment.
 :keywords: npm, artifact-repository, artifact-repositories
-:page-aliases: .:using-npm-artifact-repositories
+:navtitle: npm
+:page-aliases: using-npm-artifact-repositories.adoc
 
 [id="enabling-npm-artifact-repositories"]
 = Enabling npm artifact repositories
