--- a/modules/end-user-guide/pages/enabling-python-artifact-repositories.adoc
+++ b/modules/end-user-guide/pages/enabling-python-artifact-repositories.adoc
@@ -1,6 +1,8 @@
-:navtitle: Python
+:_content-type: PROCEDURE
+:description: You can enable a Python artifact repository in Python workspaces that run in a restricted environment.
 :keywords: python, artifact-repository, artifact-repositories
-:page-aliases: .:using-python-artifact-repositories
+:navtitle: Python
+:page-aliases: using-python-artifact-repositories.adoc
 
 [id="enabling-python-artifact-repositories"]
 = Enabling Python artifact repositories
