--- a/modules/end-user-guide/pages/first-time-contributors.adoc
+++ b/modules/end-user-guide/pages/first-time-contributors.adoc
@@ -1,7 +1,8 @@
-:navtitle: Badge for first-time contributors
+:_content-type: PROCEDURE
 :description: Badge for first-time contributors
 :keywords: user-guide, first-time contributor
-:page-aliases: 
+:navtitle: Badge for first-time contributors
+:page-aliases:
 
 [id="using-a-badge-with-a-link-to-enable-a-first-time-contributor-to-start-a-workspace_{context}"]
 = Using a badge with a link to enable a first-time contributor to start a workspace
@@ -21,4 +22,3 @@ image::contribute.svg[Factory badge]
 ----
 
 . The `README.md` file in your Git provider web interface displays the image:contribute.svg[Factory badge] factory badge. Click the badge to open a workspace with your project in your {prod-short} instance.
-
