--- a/modules/end-user-guide/pages/specifying-an-in-browser-ide-for-a-git-repository-by-using-che-editor.yaml.adoc
+++ b/modules/end-user-guide/pages/specifying-an-in-browser-ide-for-a-git-repository-by-using-che-editor.yaml.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Specifying an in-browser IDE for a Git repository by using `che-editor.yaml`
 :description: Specifying an in-browser IDE for a Git repository by using `che-editor.yaml`
 :keywords: select-IDE, che-editor, che-editor-yaml
-//:page-aliases:
+:navtitle: Specifying an in-browser IDE for a Git repository by using `che-editor.yaml`
+:page-aliases:
 
 [id="specifying-an-in-browser-ide-for-a-git-repository-by-using-the-che-editor-file_{context}"]
 = Specifying an in-browser IDE for a Git repository by using `che-editor.yaml`
