--- a/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
@@ -1,7 +1,8 @@
-:navtitle: Troubleshooting slow workspaces
+:_content-type: PROCEDURE
 :description: Troubleshooting slow workspaces
 :keywords: user-guide, troubleshooting-slow-workspaces
-:page-aliases: .:troubleshooting-slow-workspaces
+:navtitle: Troubleshooting slow workspaces
+:page-aliases: .:troubleshooting-slow-workspaces.adoc
 
 [id="troubleshooting-slow-workspaces_{context}"]
 = Troubleshooting slow workspaces
@@ -118,5 +119,3 @@ components:
     memoryRequest: 256M
 ----
 <1> Specifies the memory limit for this plug-in.
-
-
