--- a/modules/end-user-guide/pages/url-parameter-for-starting-duplicate-workspaces.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-starting-duplicate-workspaces.adoc
@@ -1,8 +1,8 @@
 :_content-type: CONCEPT
-:navtitle: URL parameter for starting duplicate workspaces
 :description: URL parameter for starting duplicate workspaces
 :keywords: duplicate, duplicated, multiple
-// :page-aliases:
+:navtitle: URL parameter for starting duplicate workspaces
+:page-aliases:
 
 [id="url-parameter-for-starting-duplicate-workspaces_{context}"]
 = URL parameter for starting duplicate workspaces
