--- a/modules/end-user-guide/pages/url-parameter-for-the-devfile-file-name.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-devfile-file-name.adoc
@@ -1,8 +1,8 @@
 :_content-type: CONCEPT
-:navtitle: URL parameter for the devfile file name
 :description: URL parameter for the devfile file name
 :keywords: override-devfile-file-name, override-file-name, file-name, devfile-name, different-devfile-name
-// :page-aliases:
+:navtitle: URL parameter for the devfile file name
+:page-aliases:
 
 [id="url-parameter-for-the-devfile-file-name_{context}"]
 = URL parameter for the devfile file name
