--- a/modules/end-user-guide/pages/user-onboarding.adoc
+++ b/modules/end-user-guide/pages/user-onboarding.adoc
@@ -2,7 +2,7 @@
 :description: User onboarding
 :keywords: getting-started, user-onboarding, new-user, new-users
 :navtitle: User onboarding
-// :page-aliases:
+:page-aliases:
 
 [id="user-onboarding_{context}"]
 = User onboarding
